# castle

./: .gitignore  AGENTS.md  Cargo.toml  MISSING_FEATURES.md  Makefile  README.md  RELEASING.md  refactor-opportunities.md  settings.json  skills-lock.json
.agents/skills/design-taste-frontend/: SKILL.md
.agents/skills/gpt-taste/: SKILL.md
.agents/skills/minimalist-ui/: SKILL.md
.agents/skills/redesign-existing-projects/: SKILL.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: app_paths.rs  app_settings.rs  board_view.rs  castle_app.rs  color_contrast.rs  folder_import.rs  home.rs  keymap.rs  lib.rs  main.rs  markdown_editor_view.rs  mcp_registration.rs  search.rs  sidebar_view.rs  system_notifications.rs  test_alloc.rs  trash.rs  tray.rs  workspace_data.rs
crates/app/src/app_shell/: action.rs  handler.rs  home.rs  mod.rs  render.rs  settings.rs  tabs.rs  workspace.rs
crates/app/src/board/: action.rs  attachments.rs  drag.rs  dto.rs  due_date.rs  entry_dialog.rs  filters.rs  handlers.rs  interactions.rs  mod.rs  persistence.rs  render.rs
crates/app/src/command_palette/: action.rs  commands.rs  handler.rs  mod.rs  render.rs  search_preview.rs  search_render.rs
crates/app/src/document_editor/: action.rs  attachments.rs  formatting.rs  handlers.rs  mod.rs  outline.rs  persistence.rs  render.rs  types.rs  util.rs
crates/app/src/markdown_editor/: action.rs  attachments.rs  emmet.rs  formatting.rs  handlers.rs  mod.rs  outline.rs  persistence.rs  render.rs  types.rs  util.rs
crates/app/src/sidebar/: action.rs  content_item.rs  drag.rs  dto.rs  event.rs  handlers.rs  mod.rs  mutations.rs  render.rs  store.rs
crates/entity/: Cargo.toml
crates/entity/src/: board.rs  board_label.rs  card.rs  entry.rs  entry_attachment.rs  entry_checklist_item.rs  entry_label.rs  lib.rs  note.rs  prelude.rs  project.rs
crates/mcp_server/: Cargo.toml
crates/mcp_server/src/: main.rs  paths.rs  server.rs  store.rs  types.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260101_000002_add_card_position.rs  m20260522_000003_notes_and_optional_board_projects.rs  m20260604_000004_project_archive_and_position.rs  m20260604_000005_entry_position.rs  m20260604_000006_note_file_ownership.rs  m20260607_180117_full_text.rs  m20260709_000008_board_labels.rs  m20260710_000009_entry_due_date.rs  m20260710_000010_entry_checklist_items.rs  m20260712_000011_home_and_trash.rs  m20260723_000012_change_revision.rs  m20260723_000013_entry_attachments_and_reminders.rs  m20260723_000014_mcp_change_domains.rs  m20260723_000015_external_change_revisions.rs  m20260723_000016_project_folder_path.rs
installer/: Castle.wxs
src/: main.rs
themes/: alduin.json  catppuccin.json  everforest.json  sick.json  spaceduck.json
