[workspace]
members = ["crates/app", "crates/migration", "crates/entity"]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
sea-orm = { version = "2.0.0-rc.38", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
lto = false
incremental = true
codegen-units = 256
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
overflow-checks = false
strip = true
panic = "abort"
