[workspace]
members = ["crates/app", "crates/migration", "crates/entity"]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed"}
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
reqwest_client = { git = "https://github.com/zed-industries/zed"}
gpui-component = { git = "https://github.com/BeratHundurel/gpui-component", rev = "3c270ed244d06fb211b47f156761c1d833eac535" }
gpui-component-assets = { git = "https://github.com/BeratHundurel/gpui-component", rev = "3c270ed244d06fb211b47f156761c1d833eac535" }
sea-orm = { version = "2.0.0-rc.43", features = [ "sqlx-sqlite", "runtime-tokio", "macros" ] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.dev]
lto = false
incremental = true
codegen-units = 256
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false
incremental = false
overflow-checks = false
strip = true
panic = "abort"
