[package]
name         = "app"
version.workspace = true
publish      = false
edition.workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
reqwest_client.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
gpui-component-assets.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
tokio.workspace = true
serde.workspace = true
migration = { path = "../migration" }
entity = { path = "../entity" }
dotenvy = "0.15"
