[package]
name         = "app"
version.workspace = true
publish      = false
edition.workspace = true

[[bin]]
name = "castle"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
reqwest_client.workspace = true
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
gpui-component-assets.workspace = true
anyhow.workspace = true
sea-orm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tree-sitter.workspace = true
tree-sitter-json.workspace = true
migration = { path = "../migration" }
entity = { path = "../entity" }
dotenvy = "0.15"
global-hotkey = "0.8.0"
raw-window-handle = "0.6.2"
tray-icon = "0.24.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
