[package]
name         = "migration"
version      = "0.1.0"
edition.workspace = true
publish      = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
tokio.workspace = true

[dependencies.sea-orm-migration]
features = [
    "sqlx-sqlite",
    "runtime-tokio",
]
version = "2.0.0-rc.38"
